--- a/beer_overflow/app/views/users/new.html.erb
+++ b/beer_overflow/app/views/users/new.html.erb
@@ -1,5 +1,5 @@
 <div id="signup_form">
-  <%= form_for(@user) do |f| %>
+  <%= form_for(:user, url: signup_path) do |f| %>
     <%= f.label :username %>
     <%= f.text_field :username %>
 
