--- a/beer_overflow/app/views/users/new.html.erb
+++ b/beer_overflow/app/views/users/new.html.erb
@@ -1,16 +1,16 @@
 <div id="signup_form">
   <%= form_for(:user, url: signup_path) do |f| %>
     <%= f.label :username %>
-    <%= f.text_field :username %>
+    <%= f.text_field :username %><br>
 
     <%= f.label :email %>
-    <%= f.text_field :email %>
+    <%= f.text_field :email %><br>
 
     <%= f.label :password %>
-    <%= f.text_field :password %>
+    <%= f.text_field :password %><br>
 
     <%= f.label :password_confirmation %>
-    <%= f.text_field :password_confirmation %>
+    <%= f.text_field :password_confirmation %><br>
 
     <%= f.submit "Signup" %>
   <% end %>
