add destroy quesion method and link

--- a/beer_overflow/app/views/questions/show.html.erb
+++ b/beer_overflow/app/views/questions/show.html.erb
@@ -6,3 +6,4 @@
 <%= @question.created_at %>
 </div>
 <%= link_to 'Edit', edit_question_path(@question)  %>
+<%= link_to 'Delete', @qustion, method: :delete, data: { confirm: "Are you sure about this, #{@question.asker.username}?" }  %>
