--- a/beer_overflow/app/views/questions/show.html.erb
+++ b/beer_overflow/app/views/questions/show.html.erb
@@ -7,3 +7,14 @@
 </div>
 <%= link_to 'Edit', edit_question_path(@question)  %>
 <%= link_to 'Delete', @qustion, method: :delete, data: { confirm: "Are you sure about this, #{@question.asker.username}?" }  %>
+
+<div class="question-answers">
+<% @question.answers.each do |q| %>
+
+<%= q.content %>
+<%= q.responder.username %>
+<p>add a comment</p>
+<%= link_to 'comment', new_question_comment_path(@question) %>
+<% end %>
+</div>
+
