add answers to question page

--- a/beer_overflow/app/views/questions/show.html.erb
+++ b/beer_overflow/app/views/questions/show.html.erb
@@ -18,3 +18,9 @@
 <% end %>
 </div>
 
+<div class="">
+  <p>answer this question:</p>
+<%= render partial: '/answers/new', controller: 'answers', action: 'new' %>
+
+</div>
+
