--- a/beer_overflow/app/views/questions/_form.html.erb
+++ b/beer_overflow/app/views/questions/_form.html.erb
@@ -3,8 +3,8 @@
     <%= f.label :title %>
     <%= f.text_field :title %>
 
-    <%= f.label :content %>
-    <%= f.text_field :content %>
+    <%= f.label :content %><br>
+    <%= f.text_area :content, cols: 30, rows: 10 %>
 
     <%= f.submit 'Submit', :class => 'submit-button' %>
     </div>
