--- a/beer_overflow/app/views/comments/new.html.erb
+++ b/beer_overflow/app/views/comments/new.html.erb
@@ -6,7 +6,8 @@
       <%= f.text_field :content %>
     </li>
     <li>
-      <%= f.submit %>
+<!--       hidden_field_tag :author_id, current_user.id
+ -->      <%= f.submit %>
     </li>
   <% end %>
 </ul>
