--- a/beer_overflow/app/views/users/new.html.erb
+++ b/beer_overflow/app/views/users/new.html.erb
@@ -12,6 +12,6 @@
     <%= f.label :password_confirmation %>
     <%= f.text_field :password_confirmation %><br>
 
-    <%= f.submit "Signup" %>
+    <%= f.submit "Signup", :class => "button" %>
   <% end %>
 </div>
