--- a/beer_overflow/app/views/answers/_new.html.erb
+++ b/beer_overflow/app/views/answers/_new.html.erb
@@ -3,5 +3,6 @@
   <%= f.label :content %>:
   <%= f.text_field :content %><br>
 
+  <%= f.hidden_field :question_id, value: params[:id] %>
   <%= f.submit %>
 <% end %>
