--- a/beer_overflow/app/views/comments/new.html.erb
+++ b/beer_overflow/app/views/comments/new.html.erb
@@ -5,9 +5,9 @@
       <%= f.label :content %>
       <%= f.text_field :content %>
     </li>
+      <%= f.hidden_field :parent_id, :value => @question.id %>
     <li>
-<!--       hidden_field_tag :author_id, current_user.id
- -->      <%= f.submit %>
+      <%= f.submit %>
     </li>
   <% end %>
 </ul>
