--- a/beer_overflow/app/views/comments/new.html.erb
+++ b/beer_overflow/app/views/comments/new.html.erb
@@ -6,6 +6,7 @@
       <%= f.text_field :content %>
     </li>
       <%= f.hidden_field :parent_id, :value => @question.id %>
+      <%= f.hidden_field :parent_type, :value => @question.class %>
     <li>
       <%= f.submit %>
     </li>
