add ask new question to index

--- a/beer_overflow/app/views/questions/index.html.erb
+++ b/beer_overflow/app/views/questions/index.html.erb
@@ -1,5 +1,7 @@
 <h1>Check Out The Questions</h1>
 
+<%= link_to 'ask a question', new_question_path %>
+
   <% @questions.each do |q| %>
   <div class="questions">
     <h4>
