--- a/beer_overflow/app/views/layouts/application.html.erb
+++ b/beer_overflow/app/views/layouts/application.html.erb
@@ -7,6 +7,9 @@
   <%= csrf_meta_tags %>
 </head>
 <body>
+  <%if current_user%>
+    <%= link_to "Logout", signout_path  %>
+  <%end%>
 
 <%= yield %>
 
