--- a/beer_overflow/app/views/layouts/application.html.erb
+++ b/beer_overflow/app/views/layouts/application.html.erb
@@ -7,9 +7,14 @@
   <%= csrf_meta_tags %>
 </head>
 <body>
-  <%if current_user%>
+  <header>
+  <% if current_user %>
     <%= link_to "Logout", signout_path  %>
-  <%end%>
+  <% else %>
+    <%= link_to "Sign Up", signup_path %>
+    <%= link_to "Login", login_path %>
+  <% end %>
+  </header>
 
 <%= yield %>
 
