updated styles for forms to be readable

--- a/beer_overflow/app/views/layouts/application.html.erb
+++ b/beer_overflow/app/views/layouts/application.html.erb
@@ -8,7 +8,7 @@
 </head>
 <body>
   <header>
-    <div id='logo'>Beer Overflow</div>
+    <div id='logo'><%= link_to "Beer Overflow", root_path %></div>
   <% if current_user %>
     <%= link_to "Logout", signout_path  %>
   <% else %>
