--- a/beer_overflow/app/assets/stylesheets/beeroverflow.css
+++ b/beer_overflow/app/assets/stylesheets/beeroverflow.css
@@ -20,3 +20,10 @@ form input {
 form textarea {
   color: black;
 }
+
+.questions {
+  border: rgb(84, 63, 52);
+  border-style: solid;
+  border-width: 2px;
+  margin-bottom: 8px;
+}
