update link given new comment routes

--- a/beer_overflow/app/views/answers/show.html.erb
+++ b/beer_overflow/app/views/answers/show.html.erb
@@ -4,6 +4,8 @@
 </div>
 
 <div>
-  <%= @answer.content %>
-  <%= @responder.username %>
+  <%= answer.content %>
+  <%= answer.responder.username %>
 </div>
+
+<p><%= link_to 'Comment', {:controller => "answer_comments", :action => "new", :answer_id => answer.id}%></p>
