--- a/beer_overflow/app/views/questions/show.html.erb
+++ b/beer_overflow/app/views/questions/show.html.erb
@@ -6,18 +6,13 @@
   <%= @question.created_at %>
 </div>
   <%= link_to 'Edit', edit_question_path(@question)  %>
-  <%= link_to 'Delete', @qustion, method: :delete, data: { confirm: "Are you sure about this, #{@question.asker.username}?" }  %>
+  <%= link_to 'Delete', @question, method: :delete, data: { confirm: "Are you sure about this, #{@question.asker.username}?" }  %>
 
 <div class="question-answers">
 
 <% @question.answers.each do |answer| %>
-
-<%= answer.content %>
-
-<%= answer.responder.username %>
-<p>add a comment</p>
-  <%= link_to 'comment', new_question_comment_path(@question) %>
-  <% end %>
+  <%=render :template => 'answers/show', locals: {answer: answer} %>
+  <%end%>
 </div>
 
 <div class="answer-question">
@@ -25,6 +20,7 @@
 <%= render partial: '/answers/new', controller: 'answers', action: 'new', locals: {:question_id => @question.id} %>
 </div>
 
+<p><%= link_to 'Comment on Question', {:controller => "question_comments", :action => "new", :question_id => @question.id}%></p>
 
 <div class="back">
 <p><%=link_to 'Back to Index', index_path  %></p>
