added a button to every answer

--- a/beer_overflow/app/views/answers/show.html.erb
+++ b/beer_overflow/app/views/answers/show.html.erb
@@ -8,4 +8,8 @@
   <%= answer.responder.username %>
 </div>
 
+<form action="">
+  Best Answer?<input type="submit" value="yes">
+</form>
+
 <p><%= link_to 'Comment', {:controller => "answer_comments", :action => "new", :answer_id => answer.id}%></p>
