--- a/beer_overflow/app/views/answers/show.html.erb
+++ b/beer_overflow/app/views/answers/show.html.erb
@@ -9,8 +9,9 @@
 </div>
 
 <%= form_for(@question) do |f| %>
+  <%= f.hidden_field :best_answer_id, :value => answer.id %>
   <%= f.submit "Best Answer" %>
-<%end%>
+<% end %>
 
 
 <p><%= link_to 'Comment', {:controller => "answer_comments", :action => "new", :answer_id => answer.id}%></p>
