--- a/beer_overflow/app/assets/stylesheets/application.css
+++ b/beer_overflow/app/assets/stylesheets/application.css
@@ -12,7 +12,7 @@
  *
  *= require_tree .
  *= require_self
- *= require normalize
+ *= require bootstrap
  *= require foundations
  *= require beeroverflow
 
