--- a/beer_overflow/app/views/questions/index.html.erb
+++ b/beer_overflow/app/views/questions/index.html.erb
@@ -1,17 +1,12 @@
-<div class="container">
-    <div class="row">
-      <%= link_to 'Ask a question', new_question_path %>
-        <% @questions.each do |q| %>
-          <div class="col-lg-8 col-lg-offset-2 col-md-10 col-md-offset-1">
-            <div class="post-preview">
-              <%= link_to "#{q.title}", question_path(q.id) %>
-                <h2 class="post-title">
-                     <%= q.content %>
-                </h2>
-                 <p class="post-meta"> <%= q.asker.username %>
-              </div>
-            <hr>
-          </div>
-         <% end %>
-      </div>
-    </div>
+<h1>Check Out The Questions</h1>
+
+<%= link_to 'ask a question', new_question_path %>
+
+  <% @questions.each do |q| %>
+  <div class="questions">
+    <h4>
+      <%= link_to "#{q.title}", question_path(q.id) %></h4><br>
+      <%= q.content %><br>
+      <%= q.asker.username %>
+  </div>
+<% end %>
