--- a/beer_overflow/app/views/questions/show.html.erb
+++ b/beer_overflow/app/views/questions/show.html.erb
@@ -15,6 +15,13 @@
       <%= link_to 'Edit', edit_question_path(@question)  %>
       <%= link_to 'Delete', @question, method: :delete, data: { confirm: "Are you sure about this, #{@question.asker.username}?" }  %>
 
+      <% @question.comments.each do |com| %>
+      <p><%= com.author.username %> commented,</p>
+      <p><%= com.content %></p>
+      <% end %>
+    <p>
+     <%= link_to 'Comment on Question', {:controller => "question_comments", :action => "new", :question_id => @question.id}%></p>
+
     <div class="question-answers">
       <% @question.answers.each do |answer| %>
       <%=render :template => 'answers/show', locals: {answer: answer} %>
@@ -33,8 +40,6 @@
       </p>
         <%= render partial: '/answers/new', controller: 'answers', action: 'new', locals: {:question_id => @question.id} %>
     </div>
-    <p>
-     <%= link_to 'Comment on Question', {:controller => "question_comments", :action => "new", :question_id => @question.id}%></p>
 
   <div class="back">
     <p>
