--- a/beer_overflow/app/views/answers/show.html.erb
+++ b/beer_overflow/app/views/answers/show.html.erb
@@ -8,10 +8,15 @@
   <%= answer.content %>
 </div>
 
-<%= form_for(@question) do |f| %>
-  <%= f.hidden_field :best_answer_id, :value => answer.id %>
-  <%= f.submit "Best Answer" %>
+<% if current_user != nil && current_user.id == @question.asker.id %>
+<%= @question.asker.id  %>
+  <%= form_for(@question) do |f| %>
+    <% f.hidden_field :best_answer_id, :value => answer.id %>
+    <%= f.submit "Best Answer" %>
+  <% end %>
 <% end %>
+
+
 
 
 <p><%= link_to 'Comment', {:controller => "answer_comments", :action => "new", :answer_id => answer.id}%></p>
