--- a/beer_overflow/app/views/layouts/application.html.erb
+++ b/beer_overflow/app/views/layouts/application.html.erb
@@ -18,7 +18,7 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand" href="index.html">BEER OVERFLOW</a>
+                <div class="navbar-brand"> <%= link_to "BEER OVERFLOW", root_path  %> </div>
             </div>
 
             <!-- Collect the nav links, forms, and other content for toggling -->
@@ -26,7 +26,7 @@
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                 <ul class="nav navbar-nav navbar-right">
                     <li>
-                        <a href="index.html">Home</a>
+                        <%= link_to "Home", root_path  %>
                     </li>
 
                     <% if current_user %>
