--- a/beer_overflow/app/views/votes/_up_form.html.erb
+++ b/beer_overflow/app/views/votes/_up_form.html.erb
@@ -1,7 +1,7 @@
 <div class="form_up_vote">
-  <%= simple_form_for [@votable, vote] do |f| %>
-    <%= f.hidden_field :votable_id, :value => @votable.id %>
-    <%= f.hidden_field :votable_type, :value => @votable.class %>
+  <%= form_for([context, @vote], url: {:controller => "votes", :action => "create"}) do |f| %>
+    <%= f.hidden_field :votable_id, :value => context.id %>
+    <%= f.hidden_field :votable_type, :value => context.class %>
     <%= f.hidden_field :liked, :value => false %>
     <%=f.submit 'up' %>
   <%end%>
