--- a/beer_overflow/app/views/answers/show.html.erb
+++ b/beer_overflow/app/views/answers/show.html.erb
@@ -14,8 +14,8 @@
 
 <% if current_user != nil && current_user.id == answer.question.asker.id %>
 
-  <%= form_for(@question) do |f| %>
-    <% f.hidden_field :best_answer_id, :value => answer.id %>
+  <%= form_for @question do |f| %>
+    <%= f.hidden_field :best_answer_id, value: answer.id %>
     <%= f.submit "Best Answer" %>
   <% end %>
 <% end %>
