--- a/beer_overflow/app/views/questions/index.html.erb
+++ b/beer_overflow/app/views/questions/index.html.erb
@@ -11,7 +11,7 @@
                 </h2>
                  <p class="post-meta">
                   <%= q.asker.username %>
-                  <%= q.updated_at  %>
+                  <%= q.date_posted  %>
               </div>
             <hr>
           </div>
