--- a/beer_overflow/app/assets/stylesheets/beeroverflow.css
+++ b/beer_overflow/app/assets/stylesheets/beeroverflow.css
@@ -39,3 +39,41 @@ form textarea {
   border-width: 2px;
   margin-bottom: 8px;
 }
+
+p1 {
+  font-family: 'Raleway', sans-serif;
+  font-size: 20px;
+}
+
+#question-page{
+margin-left: 30px;
+
+}
+
+.question-list {
+  font-size: 13px;
+  padding-left: 74px;
+  line-height: 100%;
+}
+
+.question-line-item {
+  background-color: rgba(219, 219, 219, 0.43);
+  width: 65%;
+  padding-left: 11px;
+  padding-bottom: 15px;
+  padding-top: 0px;
+  margin-top: 7px;
+}
+
+p {
+line-height: 0.1;
+margin: 20px 0;
+}
+
+.comment-page {
+  width: 55%;
+  margin-bottom: 80px;
+  text-align: center;
+  margin-left: auto;
+  margin-right: auto;
+}
