--- a/beer_overflow/app/views/questions/show.html.erb
+++ b/beer_overflow/app/views/questions/show.html.erb
@@ -1,3 +1,4 @@
+<div id="question-page">
 <h1>
   <%= @question.title %>
 </h1>
@@ -10,7 +11,7 @@
     <%= @question.asker.username %> asked,
   </p>
     <div class="question">
-      <%= @question.content %>
+     <p1> <%= @question.content %></p1>
     </div>
 
     <div class='question-asker'>
@@ -21,11 +22,14 @@
         <%= link_to 'Edit', edit_question_path(@question)  %>
         <%= link_to 'Delete', @question, method: :delete, data: { confirm: "Are you sure about this, #{@question.asker.username}?" }  %>
       <% end %>
-
+      <div class="question-list">
       <% @question.comments.each do |com| %>
+      <div class="question-line-item">
       <p><%= com.author.username %> commented,</p>
       <%= render template: 'question_comments/show', locals: {question_comment: com} %>
+      </div>
       <% end %>
+      </div>
     <p>
      <%= link_to 'Comment on Question', {:controller => "question_comments", :action => "new", :question_id => @question.id}%></p>
 
@@ -33,12 +37,14 @@
       <% @question.order_answers.each do |answer| %>
       <%=render :template => 'answers/show', locals: {answer: answer} %>
         <% answer.comments.each do |com| %>
-        <div class="answer-comments">
+        <div class="question-list">
+          <div class="question-line-item">
           <p><%= com.author.username %> commented,</p>
           <p><%= com.content %></p>
           <div class="comment_vote">
             <%= com.vote_count%> <br>
             <%=link_to 'Up', {controller: 'answer_comments', action: "upvote", id: com.id}%>|<%= link_to 'Down', {controller: 'answer_comments', action: "downvote", id: com.id }%>
+          </div>
           </div>
         </div>
           <% end %>
@@ -57,3 +63,4 @@
       <%=link_to 'Back to Index', index_path  %>
     </p>
   </div>
+</div>
