change div name

--- a/beer_overflow/app/assets/stylesheets/beeroverflow.css
+++ b/beer_overflow/app/assets/stylesheets/beeroverflow.css
@@ -70,7 +70,7 @@ line-height: 0.1;
 margin: 20px 0;
 }
 
-.comment-page {
+.new-form-page {
   width: 55%;
   margin-bottom: 80px;
   text-align: center;
