--- a/beer_overflow/app/views/answers/show.html.erb
+++ b/beer_overflow/app/views/answers/show.html.erb
@@ -1,30 +1,36 @@
-<div id="answer-username">
-  <p>
-    <%= answer.responder.username %> answered:
-  </p>
+<div class="answer">
+  <div class ="nav_bar">
+    <div class="answer_nav_bar">
+      <p>Answer by: <%= answer.responder.username %> | <%=answer.created_at%> |</p>
+    </div>
+
+    <div class="answer_nav_bar">
+      Votes <%= answer.vote_count%>
+      <%= link_to 'Up', answer_up_path(answer.id)%>|<%= link_to 'Down', answer_down_path(answer.id), locals: {answer: answer}%>
+    </div>
+
+    <div class="answer_nav_bar">
+    <% if current_user != nil && current_user.id == answer.question.asker.id %>
+
+      <%= form_for @question do |f| %>
+        <%= f.hidden_field :best_answer_id, value: answer.id %>
+        <%= f.submit "Best Answer" %>
+      <% end %>
+    <% end %>
+    </div>
+
+    <div class="answer_nav_bar">
+      <p><%= link_to 'Comment', {:controller => "answer_comments", :action => "new", :answer_id => answer.id}%></p>
+    </div>
+  </div>
+
+  <div class="answer_content">
+    <%= answer.content %>
+  </div>
+
+  <div class="answer_comments">
+    <% answer.comments.each do |com| %>
+      <%= render template: 'answer_comments/show', locals: {answer_comment: com, answer: answer} %>
+      <%end%>
+  </div>
 </div>
-<div id="answer_vote">
-  <%= answer.vote_count%> <br>
-  <%= link_to 'Up', answer_up_path(answer.id)%>|<%= link_to 'Down', answer_down_path(answer.id), locals: {answer: answer}%>
-</div>
-
-<div>
-  <%= answer.content %>
-</div>
-
-<% if current_user != nil && current_user.id == answer.question.asker.id %>
-
-  <%= form_for @question do |f| %>
-    <%= f.hidden_field :best_answer_id, value: answer.id %>
-    <%= f.submit "Best Answer" %>
-  <% end %>
-<% end %>
-
-<div class="answer_comments">
-  <% answer.comments.each do |com| %>
-    <%= render template: 'answer_comments/show', locals: {answer_comment: com, answer: answer} %>
-    <%end%>
-</div>
-
-<p><%= link_to 'Comment', {:controller => "answer_comments", :action => "new", :answer_id => answer.id}%></p>
-
