--- a/beer_overflow/app/views/questions/show.html.erb
+++ b/beer_overflow/app/views/questions/show.html.erb
@@ -1,52 +1,44 @@
-<div id="question-page">
+<div id="question">
 <h1>
   <%= @question.title %>
 </h1>
-<div>
-
-  <%= @question.vote_count%> <br>
-  <%=link_to 'Up', question_up_path(@question.id)%>|<%= link_to 'Down', question_down_path(@question.id)%>
-</div>
-  <p>
-    <%= @question.asker.username %> asked,
-  </p>
-    <div class="question">
-     <p1> <%= @question.content %></p1>
+  <div class="q_nav_bar">
+    <div class= "question_nav_bar">
+      <p>Asked by <%= @question.asker.username %> | <%= @question.created_at %> |
+      Votes <%= @question.vote_count%> |
+      <%=link_to 'Up', question_up_path(@question.id)%>|<%= link_to 'Down', question_down_path(@question.id)%>
     </div>
-
-    <div class='question-asker'>
-      <%= @question.created_at %>
-    </div>
-
       <% if current_user.id == @question.asker.id %>
-        <%= link_to 'Edit', edit_question_path(@question)  %>
-        <%= link_to 'Delete', @question, method: :delete, data: { confirm: "Are you sure about this, #{@question.asker.username}?" }  %>
+    <div class="question_nav_bar">
+        <%= link_to 'Edit', edit_question_path(@question)  %> |
+        <%= link_to 'Delete', @question, method: :delete, data: { confirm: "Are you sure about this, #{@question.asker.username}?" }  %> |
       <% end %>
-      <div class="question-list">
-      <% @question.comments.each do |com| %>
-      <div class="question-line-item">
-      <p><%= com.author.username %> commented,</p>
-      <%= render template: 'question_comments/show', locals: {question_comment: com} %>
-      </div>
-      <% end %>
-      </div>
-    <p>
-     <%= link_to 'Comment on Question', {:controller => "question_comments", :action => "new", :question_id => @question.id}%></p>
+    </div>
+    <div class="question_nav_bar">
+        <p>
+      <%= link_to 'Comment', {:controller => "question_comments", :action => "new", :question_id => @question.id}%></p>
+    </div>
+  </div>
+  <div class="question_content">
+    <p1> <%= @question.content %></p1>
+  </div>
+    <div class="answer-question">
+      <p> Answer This Question:</p>
+        <%= render partial: '/answers/new', controller: 'answers', action: 'new', locals: {:question_id => @question.id} %>
+    </div>
 
     <div class="question-answers">
       <% @question.order_answers.each do |answer| %>
-      <div class= "question_answer">
         <%=render :template => 'answers/show', locals: {answer: answer} %>
-      </div>
         <% end %>
     </div>
 
-    <div class="answer-question">
-      <p>
-        Answer This Question:
-      </p>
-        <%= render partial: '/answers/new', controller: 'answers', action: 'new', locals: {:question_id => @question.id} %>
+    <div class="question-comments">
+      <% @question.comments.each do |com| %>
+      <%= render template: 'question_comments/show', locals: {question_comment: com} %>
+      <% end %>
     </div>
+
 
   <div class="back">
     <p>
