--- a/beer_overflow/app/views/question_comments/show.html.erb
+++ b/beer_overflow/app/views/question_comments/show.html.erb
@@ -1,10 +1,12 @@
 <div class ="comment_show">
-  <div class="comment_nav_bar">
-  <p>Comment by <%= question_comment.author.username %> | <%=question_comment.created_at%> | Votes </p>
-  </div>
-  <div class="comment_nav_bar">
-    <%=question_comment.vote_count%>
-    <%= link_to 'Up', question_comment_up_path(question_comment.id)%>|<%= link_to 'Down', question_comment_down_path(question_comment.id)%>
+  <div class="c_nav_bar">
+    <div class="comment_nav_bar">
+    <p>Comment by <%= question_comment.author.username %> | <%=question_comment.created_at%> | Votes </p>
+    </div>
+    <div class="comment_nav_bar">
+      <%=question_comment.vote_count%>
+      <%= link_to 'Up', question_comment_up_path(question_comment.id)%>|<%= link_to 'Down', question_comment_down_path(question_comment.id)%>
+    </div>
   </div>
   <div class="comment">
   <%= question_comment.content %>
