--- a/beer_overflow/app/views/questions/show.html.erb
+++ b/beer_overflow/app/views/questions/show.html.erb
@@ -6,18 +6,14 @@
     <div class= "question_nav_bar">
       <p>Asked by <%= @question.asker.username %> | <%= @question.created_at %> |
       Votes <%= @question.vote_count%> |
-      <%=link_to 'Up', question_up_path(@question.id)%>|<%= link_to 'Down', question_down_path(@question.id)%>
+      <%=link_to 'Up', question_up_path(@question.id)%>|<%= link_to 'Down', question_down_path(@question.id)%> | <%= link_to 'Comment', {:controller => "question_comments", :action => "new", :question_id => @question.id}%>
     </div>
       <% if current_user.id == @question.asker.id %>
-    <div class="question_nav_bar">
+      <div class="question_nav_bar">
         <%= link_to 'Edit', edit_question_path(@question)  %> |
         <%= link_to 'Delete', @question, method: :delete, data: { confirm: "Are you sure about this, #{@question.asker.username}?" }  %> |
+      </div>
       <% end %>
-    </div>
-    <div class="question_nav_bar">
-        <p>
-      <%= link_to 'Comment', {:controller => "question_comments", :action => "new", :question_id => @question.id}%></p>
-    </div>
   </div>
   <div class="question_content">
     <p1> <%= @question.content %></p1>
@@ -26,20 +22,16 @@
       <p> Answer This Question:</p>
         <%= render partial: '/answers/new', controller: 'answers', action: 'new', locals: {:question_id => @question.id} %>
     </div>
-
     <div class="question-answers">
       <% @question.order_answers.each do |answer| %>
         <%=render :template => 'answers/show', locals: {answer: answer} %>
         <% end %>
     </div>
-
     <div class="question-comments">
       <% @question.comments.each do |com| %>
       <%= render template: 'question_comments/show', locals: {question_comment: com} %>
       <% end %>
     </div>
-
-
   <div class="back">
     <p>
       <%=link_to 'Back to Index', index_path  %>
